# pythonanywhere-cli

./: README.md  pyproject.toml
documentation/en/: architecture.md  getting-started.md
documentation/en/commands/: account.md  console.md  deploy.md  files.md  webapp.md
documentation/zh/: architecture.md  getting-started.md
documentation/zh/commands/: account.md  console.md  deploy.md  files.md  webapp.md
pa_cli/: config.py
pa_cli/api/: client.py  consoles.py  files.py  webapps.py
pa_cli/cli/: account_cmd.py  consoles_cmd.py  deploy_cmd.py  files_cmd.py  init_cmd.py  main.py  webapps_cmd.py
pa_cli/crawler/: account_crawler.py  console_crawler.py
pa_cli/workflows/: deploy.py
tests/: test_account_crawler.py  test_config.py  test_console_crawler.py
tests/api/: test_client.py  test_consoles.py  test_files.py  test_webapps.py
tests/cli/: test_account_cmd.py  test_consoles_cmd.py  test_deploy_cmd.py  test_files_cmd.py  test_init_cmd.py  test_webapps_cmd.py
