[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pa-cli"
version = "0.1.0"
description = "CLI tool for automating PythonAnywhere deployments"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
pa = "pa_cli.cli.main:app"

[tool.setuptools.packages.find]
include = ["pa_cli*"]
